--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-
+*{
+	margin:0;
+	padding:0;
+}
 /* Your CSS Code here. */
+blockquote.questions{
+	background-color:#f8fffe;
+	height:50px;
+	margin-top:20px;
+	padding:15px;
+	max-width:600px;
+	border-left:8px solid green;
+}
